--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,22 +10,26 @@
 
 body{
   font-family: 'DM Sans', sans-serif;
+  background-color: #f5f5f5;
 }
 /* Navbar */
 .header{
+  display: flex;
+  align-items: center;
   height: 50px;
-  background-color: #2419BE;
+  /* background-color: #2419BE; */
+  background-color: black;
 }
 
 .navbarImg{
-  height: 40px;
-  width: 40px;
-  padding-top: 5px;
+  margin-left: 10px;
+  height: 50px;
+  width: 50px;
 }
 
 /* Index */
 .center {
-  border: 5px solid #2419BE;
+  border: 5px solid black;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -40,6 +44,7 @@ body{
 .pagination{
   display: flex !important;
   justify-content: center !important;
+  align-items: center !important;
 }
 .pagination li a {
   background-color: #E5E5E5;
@@ -48,7 +53,7 @@ body{
 }
 
 .pagination li a:hover{
-  background-color: #2419BE;
+  background-color: black;
   color: white !important;
 
 }
@@ -58,7 +63,7 @@ body{
 }
 
 .custom-pagination .ant-pagination-item-active a {
-  background-color: #2419BE;
+  background-color: black;
   color: white !important;
   border: none !important;
 }
@@ -83,12 +88,13 @@ input:focus-visible{
 /* Breadcrumb */
 ul.breadcrumb {
   padding: 6px 16px;
+  display: flex;
+  align-items: center;
   list-style: none;
   background-color: #eee;
 }
 ul.breadcrumb li {
-  display: inline;
-  font-size: 18px;
+  font-size: small;
 }
 ul.breadcrumb li+li:before {
   padding: 8px;
@@ -102,6 +108,12 @@ ul.breadcrumb li+li:before {
   cursor: pointer;
   object-fit: cover;
 }
+
+.ant-table-column-title{
+  font-weight: bold;
+  text-decoration: none !important;
+}
+
 
 
 /* @media (max-width: 768px) {
